[gd_scene load_steps=22 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://media/sprites/life/frame_00_delay-0.5s.png" type="Texture" id=3]
[ext_resource path="res://media/sprites/life/frame_01_delay-0.1s.png" type="Texture" id=4]
[ext_resource path="res://media/sprites/life/frame_02_delay-0.1s.png" type="Texture" id=5]
[ext_resource path="res://media/sprites/life/frame_03_delay-0.1s.png" type="Texture" id=6]
[ext_resource path="res://media/sprites/life/frame_04_delay-0.1s.png" type="Texture" id=7]
[ext_resource path="res://media/sprites/life/frame_05_delay-0.1s.png" type="Texture" id=8]
[ext_resource path="res://media/sprites/life/frame_06_delay-0.1s.png" type="Texture" id=9]
[ext_resource path="res://media/sprites/life/frame_07_delay-0.1s.png" type="Texture" id=10]
[ext_resource path="res://media/sprites/life/frame_08_delay-0.1s.png" type="Texture" id=11]
[ext_resource path="res://media/sprites/life/frame_09_delay-0.1s.png" type="Texture" id=12]
[ext_resource path="res://media/sprites/life/frame_10_delay-0.1s.png" type="Texture" id=13]
[ext_resource path="res://media/sprites/life/frame_11_delay-0.1s.png" type="Texture" id=14]
[ext_resource path="res://media/sprites/life/frame_12_delay-0.1s.png" type="Texture" id=15]
[ext_resource path="res://media/sprites/life/frame_13_delay-0.1s.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="HUD" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -42.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Rect", "custom_fonts" ]

[node name="MessageLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -93.0
margin_right = 295.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Ajolote Run"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="StartButton" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -86.0
margin_right = 109.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Iniciar"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="MessageTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Vida" type="Node2D" parent="." index="4"]

[node name="Heart3" type="AnimatedSprite" parent="Vida" index="0"]

position = Vector2( 558.583, 36.446 )
scale = Vector2( 0.281968, 0.253102 )
frames = SubResource( 4 )
animation = "idle"
frame = 2
playing = true

[node name="Heart4" type="AnimatedSprite" parent="Vida" index="1"]

position = Vector2( 491.961, 36.446 )
scale = Vector2( 0.281968, 0.253102 )
frames = SubResource( 4 )
animation = "idle"
frame = 2
playing = true

[node name="Heart5" type="AnimatedSprite" parent="Vida" index="2"]

position = Vector2( 688.127, 95.6658 )
scale = Vector2( 0.281968, 0.253102 )
frames = SubResource( 4 )
animation = "idle"
frame = 1
playing = true

[node name="Heart2" type="AnimatedSprite" parent="Vida" index="3"]

position = Vector2( 625.034, 35.5175 )
scale = Vector2( 0.281968, 0.253102 )
frames = SubResource( 4 )
animation = "idle"
frame = 2
playing = true

[node name="Heart1" type="AnimatedSprite" parent="Vida" index="4"]

position = Vector2( 690.243, 35.3705 )
scale = Vector2( 0.281968, 0.253102 )
frames = SubResource( 4 )
animation = "idle"
frame = 1
playing = true

[node name="Best" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 2.0
margin_right = 422.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Max: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Prepare" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 201.0
margin_right = 716.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Prepare"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]


